# multimodal-stock-modeling

./: .gitignore  Makefile  OPTIMIZATION_GUIDE.md  README.md  benchmark_performance.py  debug_real_data.py  demo_return_analysis.py  main.py  pyproject.toml  quick_analysis.py  real_data_analysis.py  requirements.txt  setup.py  train.py  train_production.py  training_monitor.py  verify_data_pipeline.py  verify_fusion_model.py  verify_setup.py  verify_training.py  visualize_results.py
data/: employment_data_loader.py  news_data_loader.py  real_data_fetcher.py  real_dataset_builder.py  stock_data_loader.py  unified_dataset.py
models/: employment_encoder.py  fusion_layer.py  prediction_heads.py  text_encoder.py  tft_encoder.py
tests/: test_basic_functionality.py
training/: __init__.py  loss_functions.py  metrics.py  trainer.py
